<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SaisieRendezVous">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/consigne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/saisie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".3"
        />
    <TextView
        android:id="@+id/textDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textDate"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textHeure"
        app:layout_constraintStart_toStartOf="@id/consigne"
        />
    <TextView
        android:id="@+id/infoDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/infoDate"
        android:onClick="saisieDate"
        app:layout_constraintTop_toTopOf="@id/textDate"
        app:layout_constraintStart_toEndOf="@+id/saisie"
        />
    <TextView
        android:id="@+id/textHeure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textHeure"
        app:layout_constraintTop_toBottomOf="@+id/textDate"
        app:layout_constraintBottom_toTopOf="@id/textDuree"
        app:layout_constraintStart_toStartOf="@id/consigne"
        />
    <TextView
        android:id="@+id/infoHeure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/infoHeure"
        android:onClick="saisieHeure"
        app:layout_constraintTop_toTopOf="@+id/textHeure"
        app:layout_constraintStart_toEndOf="@+id/saisie"
        />
    <TextView
        android:id="@+id/textDuree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textDuree"
        app:layout_constraintTop_toBottomOf="@+id/textHeure"
        app:layout_constraintBottom_toTopOf="@id/textObjet"
        app:layout_constraintStart_toStartOf="@id/consigne"
        />
    <TextView
        android:id="@+id/infoDuree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/infoDuree"
        android:onClick="saisieDuree"
        app:layout_constraintTop_toTopOf="@+id/textDuree"
        app:layout_constraintStart_toEndOf="@+id/saisie"
        />
    <TextView
        android:id="@+id/textObjet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textObjet"
        app:layout_constraintTop_toBottomOf="@+id/textDuree"
        app:layout_constraintBottom_toTopOf="@+id/menu"
        app:layout_constraintStart_toStartOf="@id/consigne"
        />
    <EditText
        android:id="@+id/infoObjet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/infoObjet"
        app:layout_constraintTop_toTopOf="@+id/textObjet"
        app:layout_constraintStart_toEndOf="@+id/saisie"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".85"
        />
    <Button
        android:id="@+id/boutonValider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valider"
        android:onClick="memorisationRendezVous"
        app:layout_constraintTop_toBottomOf="@+id/menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/boutonAnnuler"
        />
    <Button
        android:id="@+id/boutonAnnuler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/annuler"
        android:onClick="annulation"
        app:layout_constraintTop_toBottomOf="@+id/menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/boutonValider"
        app:layout_constraintEnd_toEndOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>