<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/texte_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/le"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/rdv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jj_mois"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/texte_date"
        />
    <TextView
        android:id="@+id/texte_heure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/rdv_date"
        />
    <TextView
        android:id="@+id/rdv_heure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hh_mm"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/texte_heure"
        />
    <TextView
        android:id="@+id/texte_duree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pendant"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/rdv_heure"
        />
    <TextView
        android:id="@+id/rdv_duree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hh_mm"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/texte_duree"
        />
    <TextView
        android:id="@+id/rdv_objet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/objet"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toBottomOf="@+id/rdv_heure"
        app:layout_constraintStart_toStartOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
